--- a/aim.yml
+++ b/aim.yml
@@ -4,7 +4,7 @@
     - cyberark.pas
   tasks:
     - name: Retrieve SSH Private Key for Login from CyberArk
-      cyberark.pas.cyberark_credential:
+      cyberark_credential:
         api_base_url: "https://comp01.cybr.com"
         validate_certs: no
         client_cert: ""
@@ -16,7 +16,7 @@
       no_log: no
 
     - name: Retrieve REST API Service Account for Onboarding to CyberArk
-      cyberark.pas.cyberark_credential:
+      cyberark_credential:
         api_base_url: "https://comp01.cybr.com"
         validate_certs: no
         client_cert: ""
@@ -148,7 +148,7 @@
         state: present
 
     - name: Authenticate to CyberArk Web Services
-      cyberark.pas.cyberark_authentication:
+      cyberark_authentication:
         api_base_url: "https://comp01.cybr.com"
         validate_certs: no
         username: "{{ cyberark_rest_user }}"
@@ -181,7 +181,7 @@
         validate_certs: no
 
     - name: Logoff from CyberArk Web Services
-      cyberark.pas.cyberark_authentication:
+      cyberark_authentication:
         state: absent 
         cyberark_session: "{{ cyberark_session }}"
 
